# data_cos_fetch

./: .gitignore  README.md  package.json
desktop/: main.cjs  package-lock.json  package.json
desktop/_build/: main.cjs  package-lock.json  package.json  preload.cjs
desktop/assets/: icon.icns
desktop/scripts/: build-api-win.cjs  dist-win.cjs  ensure-electron.cjs
docs/: cutover.md  endpoint-mapping.md  migration-plan.md  parity-report.md
rust/: Cargo.toml
rust/crates/data-cos-api/: Cargo.toml
rust/crates/data-cos-api/src/: main.rs
rust/crates/data-cos-core/: Cargo.toml
rust/crates/data-cos-core/src/: lib.rs
rust/crates/data-cos-data-adapter/: Cargo.toml
rust/crates/data-cos-data-adapter/src/: lib.rs
scripts/: dev_desktop.sh  package_desktop.sh  parity_harness.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: AppNavbar.tsx  CosFilterSidebar.tsx  CosFilterSidebarPanels.tsx  CosTable.tsx  CosTrendPanel.tsx  DataFetchTable.tsx  EmptyState.tsx  GroupSummaryTable.tsx  MetricCard.tsx  PartInspector.tsx  TablePager.tsx  WavelengthHistogram.tsx
web/src/components/ui/: tooltip.tsx
web/src/helpers/: api.ts  csv.ts  types.ts  utils.ts
web/src/stores/: app-store.ts  cos-filter-store.ts  data-fetch-store.ts
web/src/views/: CosFilterView.tsx  DataFetchView.tsx
