[workspace]
members = [
  "crates/data-cos-core",
  "crates/data-cos-data-adapter",
  "crates/data-cos-api",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "json"] }
calamine = "0.31"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bincode = "1.3"
rayon = "1.10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
