[package]
name = "data-cos-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
data-cos-core = { path = "../data-cos-core" }
data-cos-data-adapter = { path = "../data-cos-data-adapter" }
