[package]
name = "data-cos-data-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
calamine.workspace = true
chrono.workspace = true
serde.workspace = true
csv = "1.3"
rayon.workspace = true
bincode.workspace = true
data-cos-core = { path = "../data-cos-core" }
